// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node-API on Windows_NT Off 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`Node-API on Windows_NT Off 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query-engine-windows.exe)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Node-API on Windows_NT Off: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-windows.exe",
  "schema.prisma",
]
`;

exports[`Node-API on Windows_NT Off: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query-engine-windows.exe",
  "README.md",
]
`;

exports[`Node-API on Windows_NT Off: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-windows.exe",
  "README.md",
  "scripts",
]
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query_engine_napi-windows.dll.node)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true and Preview Feature 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true and Preview Feature 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query_engine_napi-windows.dll.node)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query_engine_napi-windows.dll.node",
  "README.md",
]
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query_engine_napi-windows.dll.node",
  "README.md",
  "scripts",
]
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query_engine_napi-windows.dll.node",
  "README.md",
]
`;

exports[`Node-API on Windows_NT PRISMA_FORCE_NAPI=true: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query_engine_napi-windows.dll.node",
  "README.md",
  "scripts",
]
`;

exports[`Node-API on Windows_NT Preview Feature 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`Node-API on Windows_NT Preview Feature 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query-engine-windows.exe)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`Node-API on Windows_NT Preview Feature: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Node-API on Windows_NT Preview Feature: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query-engine-windows.exe",
  "README.md",
]
`;

exports[`Node-API on Windows_NT Preview Feature: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-windows.exe",
  "query_engine_napi-windows.dll.node",
  "README.md",
  "scripts",
]
`;
